Added a shopping page
Shopping page is mostly done visually. I will need to connect the buttons to a place you can purchase.  I also need to center the buy buttons.

--- a/css/main.css
+++ b/css/main.css
@@ -3363,3 +3363,11 @@ input, select, textarea {
 	display: inline-block;
 	padding-right: 80px;
 }
+#shop{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+.honey{
+	height: 60%;
+}
