--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,8 @@ section, summary, time, mark, audio, video {
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;}
+	display: block;
+	}
 
 body {
 	line-height: 1;
@@ -2540,7 +2541,7 @@ input, select, textarea {
 	}
 
 		#header h1 {
-			padding: 0 0 2.75em 0;
+			padding: 0 0 1em 0;
 			margin: 0;
 		}
 
@@ -3359,7 +3360,17 @@ input, select, textarea {
 
 	}
 .logoPics{
-	width:10%;
-	display: inline-block;
-	padding-right: 80px;
+	width: 50%;
+	
+}
+.lgs{
+	display: flex;
+	justify-content: center;
+	padding-bottom: 1%;
+}
+.pic{
+	width: 80%;
+}
+.idaho{
+	width: 20%;
 }
