--- a/css/main.css
+++ b/css/main.css
@@ -2675,7 +2675,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/Bee on flower.jpg");
 		background-position: center center;
 		background-size: cover;
 		height: 28em;
