CSS is now in line.
finished with centering the logos. Need JS now.

--- a/css/main.css
+++ b/css/main.css
@@ -3374,7 +3374,7 @@ input, select, textarea {
 .lgs{
 	display: flex;
 	justify-content: center;
-	padding-bottom: 1%;
+	align-content: center;
 }
 
 .idaho{
