Added pictures to index

--- a/css/main.css
+++ b/css/main.css
@@ -3395,7 +3395,10 @@ input, select, textarea {
 	
 }
 .purchase{
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-content: center;
 }
 .brb{
 	width: 5%;
