--- a/css/main.css
+++ b/css/main.css
@@ -3290,7 +3290,16 @@ input, select, textarea {
 			.wrapper {
 				padding: 2em 0 1px 0;
 			}
-
+			img{
+				width: 60%;
+			}
+			.buy{
+				width: 60%;
+				margin-left: 15%;
+			}
+			.honey{
+				margin-left: 15%;
+			}
 	}
 
 /* Mobile (Portrait) */
@@ -3366,11 +3375,14 @@ input, select, textarea {
 			.pic{
 				width: 80%;
 			}	
+			img{
+				width: 5r%
+			}
 }
 			.logoPics{
 				width: 10%;
-	
 			}	
+			
 .lgs{
 	display: flex;
 	justify-content: center;
